--- a/README
+++ b/README
@@ -8,6 +8,9 @@ Need complete http site address (e.g. http://myblog.wordpress.com) and Akismet A
 
 ##Changelog##
 
+ver. 1.5.6
+- change label color in blue.
+
 
 ver. 1.5.0
 - add popup;
