--- a/README
+++ b/README
@@ -9,7 +9,8 @@ Need complete http site address (e.g. http://myblog.wordpress.com) and Akismet A
 ##Changelog##
 
 ver. 1.5.6
-- change label color in blue.
+- change label color in blue;
+- change WP Stat url web site.
 
 
 ver. 1.5.0
