--- a/README
+++ b/README
@@ -9,6 +9,14 @@ Need complete http site address (e.g. http://myblog.wordpress.com) and Akismet A
 
 ##Changelog##
 
+ver. 1.6.2
+- SPECIAL 100 USERS EDITION!
+- STATS POPUP: applied new icons navigation;
+- settled CREDENTIAL POPUP;
+- new badge colors: Light Grey, Dark Grey, Black;
+- darkened the red label background to increase readability;
+- fixed all reported bugs.
+
 ver. 1.6.1
 - renewed STATS POPUP (now accessible simply clicking WP STATS icon);
 - fixed all reported bugs.
